Downgrade express dependency to version 4.19.2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "msd_t5",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.19.2"
   }
 }
+
